--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="main-content">
         <img src="assets/BCU_Logo.png" height="150" width="350" alt="BCU logo"></img>
-        <h1 style="font-weight: bold;">Innovation Fest 2020</h1>
+        <h1 style="font-weight: bold; font: 4em sans-serif;">Innovation Fest 2020</h1>
         <h1 id="countdown"></h1>
     </div>
     <div class="blurred-bg">
