--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
 
 <body>
     <div class="main-content">
-        <img src="assets/BCU_Logo.png" height="150" width="350" alt="BCU logo"></img>
+        <img src="assets/BCU_Logo.png" height="150" width="350" alt="BCU logo" class="white"></img>
         <h1 style="font-weight: bold; font: 4em sans-serif;">Innovation Fest 2020</h1>
         <h1 id="countdown"></h1>
     </div>
     <div class="blurred-bg">
-        <!-- <img id="blurred-bg "src="/assets/Innovation_group.png" alt=""> -->
     </div>
     <div class="footer"> <p>Innovation Fest 2020 - CEBE Faculty @ BCU</p></div>
     <script src="./scripts/countdown.js" async defer></script>
